buildscript {
    repositories {
        mavenLocal()
        mavenCentral()
        gradlePluginPortal()
        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
        google()
    }
    dependencies {
        classpath "com.android.tools.build:gradle:4.1.3"
    }
}

allprojects {
    apply plugin: "idea"

//    tasks.withType(JavaCompile) {
//        options.compilerArgs += "--enable-preview"
//    }
//    tasks.withType(Test) {
//        jvmArgs += "--enable-preview"
//    }
//    tasks.withType(JavaExec) {
//        jvmArgs += "--enable-preview"
//    }

    version = "1.0"
    ext {
        appName = "gdx-rpg2"
        gdxVersion = "1.10.0"
        controllerVersion = "2.2.0"
        mappingVersion = "2.3.0"
        aiVersion = "1.8.2"
        lombokVersion = "1.18.20"
        jacksonVersion = "2.12.3"
        assertjVersion = "3.19.0"
        mockitoVersion = "3.11.1"
        junitVersion = "5.7.2"
    }

    repositories {
        mavenLocal()
        mavenCentral()
        gradlePluginPortal()
        google()
        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
        maven { url "https://oss.sonatype.org/content/repositories/releases/" }
    }
}

project(":desktop") {
    apply plugin: "java-library"
    sourceCompatibility = 16

    dependencies {
        implementation project(":core")
        api "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
        api "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
        api "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
        api "com.badlogicgames.gdx-controllers:gdx-controllers-desktop:$controllerVersion"
    }
}

project(":android") {
    apply plugin: "com.android.application"
    configurations { natives }

    dependencies {
        implementation project(":core")
        api "com.badlogicgames.gdx:gdx-backend-android:$gdxVersion"
        natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-armeabi-v7a"
        natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-arm64-v8a"
        natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-x86"
        natives "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-x86_64"
//        api "com.badlogicgames.gdx-controllers:gdx-controllers-android:$controllerVersion"
//        api "com.badlogicgames.gdx:gdx-ai:$aiVersion"
        api "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
        natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-armeabi-v7a"
        natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-arm64-v8a"
        natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-x86"
        natives "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-x86_64"
    }
}

project(":core") {
    apply plugin: "java-library"
    sourceCompatibility = 16

    dependencies {
        compileOnly "org.projectlombok:lombok:$lombokVersion"
        annotationProcessor "org.projectlombok:lombok:$lombokVersion"

        api "com.badlogicgames.gdx:gdx:$gdxVersion"
        api "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
        api "com.badlogicgames.gdx-controllers:gdx-controllers-core:$controllerVersion"
        api "de.golfgl.gdxcontrollerutils:gdx-controllerutils-mapping:$mappingVersion"
        api "com.badlogicgames.gdx:gdx-ai:$aiVersion"
        api "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
    }
}

project(":tests") {
    apply plugin: "java-library"
    sourceCompatibility = 16

    dependencies {
        implementation project(":core")
        testImplementation "com.badlogicgames.gdx:gdx:$gdxVersion"
        testImplementation "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
        testImplementation "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
        testImplementation "org.assertj:assertj-core:$assertjVersion"
        testImplementation "org.mockito:mockito-core:$mockitoVersion"
        testImplementation "org.junit.jupiter:junit-jupiter-api:$junitVersion"
    }
}
